--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,7 +28,8 @@
     "docs:generate": "mkdir -p docs && npm run docs:json && npm run docs:yaml",
     "docs:serve": "echo 'API Documentation available at: http://localhost:8080/docs'",
     "docs:validate": "node scripts/validate-api-docs.js",
-    "docs:test": "npm run docs:validate"
+    "docs:test": "npm run docs:validate",
+    "lint": "eslint src --ext .ts,.js --fix"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -49,6 +50,7 @@
     "fastify": "^4.24.3",
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
+    "light-my-request": "^6.6.0",
     "node-fetch": "^3.3.2",
     "qrcode": "^1.5.3",
     "shared-types": "file:../../packages/shared-types",
@@ -67,7 +69,7 @@
     "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.15.2",
-    "@vitest/coverage-v8": "^2.0.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "prisma": "^6.12.0",
     "supertest": "^7.0.0",
     "totp-generator": "^1.0.0",
@@ -75,7 +77,7 @@
     "tsx": "^4.11.2",
     "typescript": "^5.3.3",
     "vite": "^6.1.6",
-    "vitest": "^2.0.0",
+    "vitest": "^3.2.4",
     "vitest-mock-extended": "^2.0.0"
   },
   "keywords": [],
