--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,11 +11,12 @@
     "test:watch": "vitest --watch",
     "test:specific": "vitest run --reporter=verbose",
     "test:coverage": "vitest run --coverage --reporter=verbose",
-    "test:no-coverage": "vitest run --reporter=verbose"
+    "test:no-coverage": "vitest run --reporter=verbose",
+    "lint": "eslint src --ext .ts,.tsx,.js,.jsx --fix"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "axios": "^1.6.2",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.526.0",
@@ -37,8 +38,8 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3",
-    "vite": "^5.0.8",
-    "vitest": "^1.6.1",
+    "vite": "^6.1.6",
+    "vitest": "^3.2.4",
     "zod": "^3.22.4"
   }
 }
