--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@vitest/coverage-v8": "^3.2.4",
     "axios": "^1.6.2",
     "framer-motion": "^12.23.9",
