--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ WEB_APP_URL=http://localhost:5173
 VITE_API_URL=http://localhost:8080/api
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+AWS_REGION=eu-north-1
+LOG_LEVEL=info
