--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
+    "@fastify/rate-limit": "^9.0.0",
     "@fastify/cors": "^8.4.0",
     "@fastify/helmet": "^11.1.1",
     "@fastify/oauth2": "^7.8.0",
