--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "setup": "npm install && cp apps/api/.env.example apps/api/.env && cp apps/web/.env.example apps/web/.env && cp .env.example .env && echo '✅ Setup complete! Update apps/api/.env with your values, then run: npm run docker:dev'"
   },
   "devDependencies": {
+    "@oclif/core": "^4.5.2",
     "@types/qrcode": "^1.5.5",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
@@ -68,10 +69,9 @@
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-tailwindcss": "^3.18.2",
+    "newman": "^6.2.0",
     "prettier": "^3.6.2",
-    "turbo": "^2.5.5",
-    "artillery": "^2.0.0",
-    "newman": "^6.2.0"
+    "turbo": "^2.5.5"
   },
   "workspaces": [
     "apps/*",
@@ -80,6 +80,7 @@
   "dependencies": {
     "@eslint-community/regexpp": "^4.12.1",
     "@prisma/client": "^6.12.0",
+    "artillery": "^2.0.15",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0",
     "validator": "^13.15.15"
