Docs: Restructure and update project documentation
This commit reorganizes and updates the project's documentation,
improving clarity and accessibility.

Key changes include:
- Refactored documentation structure:
    - Deleted outdated API, project management, and user guide documents.
    - Introduced new comprehensive guides for API, deployment, internationalization,
      quality assurance, and updates.
    - Added , , and .
- Updated existing documentation for Authentication, Testing, CI/CD,
  Architecture, Design Patterns, Monitoring, Security, and User Manual.
- Standardized environment variable configurations across  files.
- Updated API routes and services to reflect recent feature changes (e.g., TwoFactorAuthService).
- Synchronized package dependencies and build configurations.
- Enhanced CI/CD by updating monitoring workflow and adding documentation link validation.
- Renamed monitoring README to MONITORING_SETUP.md for better clarity.
- Included  and  files.

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,48 +1,37 @@
-# This is an example file for production environment variables.
-# Copy this file to .env and fill in the values for your production environment.
+# -------------------------------------
+# Production Environment Variables
+# -------------------------------------
+# Copy this file to .env and fill in values for production.
 
-# -------------------------------------
-# Docker & Image Configuration
-# -------------------------------------
-# Your Docker Hub username is required to pull the correct images.
+# --- Docker & Images ---
 DOCKERHUB_USERNAME=your-dockerhub-username
-
-# The following tags are typically set by the CI/CD pipeline.
-# For manual deployment, you can set them to 'latest' or a specific git SHA.
 API_IMAGE_TAG=latest
 WEB_IMAGE_TAG=latest
 
-# -------------------------------------
-# Frontend Configuration
-# -------------------------------------
-# The API base URL for the frontend (should be /api in production)
-VITE_API_URL=/api
-
-# -------------------------------------
-# Database Configuration
-# -------------------------------------
-# These values are used to configure the PostgreSQL container.
+# --- Database ---
 POSTGRES_USER=your-prod-db-user
 POSTGRES_PASSWORD=your-secure-prod-db-password
 POSTGRES_DB=your-prod-db-name
+DB_HOST=postgres
+DB_PORT=5432
 
-# This is the full connection string used by the API to connect to the database.
-# Note that the host is 'postgres', which is the service name in docker-compose.prod.yml.
-# This will be automatically constructed from the individual components below.
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public"
+# Derived – must come after DB vars above
+# DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?schema=public"
+DATABASE_URL="postgresql://your-prod-db-user:your-secure-prod-db-password@postgres:5432/your-prod-db-name?schema=public"
 
-# -------------------------------------
-# Application Secrets
-# -------------------------------------
-# A strong, random string used for signing JWTs. Generate one with: openssl rand -base64 32
-JWT_SECRET=your-super-secure-jwt-secret
-
-# The public-facing URL of your web application.
+# --- App URLs (public/base paths) ---
 WEB_APP_URL=https://your-domain.com
+VITE_API_URL=/api
 
-# -------------------------------------
-# Google OAuth Credentials
-# -------------------------------------
-# These are obtained from the Google Cloud Console for your production application.
+# --- Auth & Security ---
+JWT_SECRET=production-super-secure-jwt-secret-key
+
+# --- Google OAuth ---
 GOOGLE_CLIENT_ID=your-production-google-client-id
-GOOGLE_CLIENT_SECRET=your-production-google-client-secret 
+GOOGLE_CLIENT_SECRET=your-production-google-client-secret
+
+# Server
+NODE_ENV=production
+
+# 
+SLACK_WEBHOOK_URL
