--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -3,4 +3,6 @@
 
 # API Configuration
 # For local development, this should point to your local API server
+WEB_APP_URL=http://localhost:5173
 VITE_API_URL=http://localhost:8080/api
+VITE_ENV=development
