--- a/.env.example
+++ b/.env.example
@@ -2,18 +2,46 @@
 # Development Environment Variables
 # -------------------------------------
 # This file contains environment variables for local development.
-# Copy this file to .env and modify the values as needed.
+# Copy this file to .env and modify as needed.
 
+# --- App Ports ---
+API_PORT=8080
+WEB_PORT=5173
+
+# --- Database ---
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=campusdb
+DB_HOST=localhost
 DB_PORT=5432
-API_PORT=8080
-WEB_PORT=5173
-JWT_SECRET=local-dev-jwt-secret-key
+
+# Derived – must come after DB/POSTGRES vars above
+# DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?schema=public"
+DATABASE_URL="postgresql://user:password@localhost:5432/campusdb?schema=public"
+
+# --- App URLs ---
 WEB_APP_URL=http://localhost:5173
 VITE_API_URL=http://localhost:8080/api
+API_URL=http://localhost:8080
+
+# --- Auth & Security ---
+JWT_SECRET=local-dev-jwt-secret-key
+
+# --- Google OAuth ---
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# Server
+NODE_ENV=development
+
+# --- Cloud & Logging ---
 AWS_REGION=eu-north-1
 LOG_LEVEL=info
+
+# 
+SLACK_WEBHOOK_URL
+
+MONITORING_BASE_URL
+MONITORING_WEB_URL
+
+DOCKERHUB_USERNAME
