--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,20 +1,37 @@
-# Database
+# -------------------------------------
+# Development Environment Variables
+# -------------------------------------
+# This file contains environment variables for local development.
+# Copy this file to .env and modify as needed.
+
+# --- App Ports ---
+API_PORT=8080
+WEB_PORT=5173
+
+# --- Database ---
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=campusdb
+DB_HOST=localhost
+DB_PORT=5432
+
+# Derived – must come after DB/POSTGRES vars above
+# DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?schema=public"
 DATABASE_URL="postgresql://user:password@localhost:5432/campusdb?schema=public"
+# --- App URLs ---
+WEB_APP_URL=http://localhost:5173
+VITE_API_URL=http://localhost:8080/api
+API_URL=http://localhost:8080
+# --- Auth & Security ---
+JWT_SECRET=local-dev-jwt-secret-key
 
-# JWT
-JWT_SECRET="your-super-secret-jwt-key"
-
-# App URLs
-WEB_APP_URL="http://localhost:5173"
+# --- Google OAuth ---
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 # Server
-PORT=8080
 NODE_ENV=development
 
-# OAuth Providers
-# Note: For development, the callback URL should be http://localhost:8080/api/auth/[provider]/callback
-# You must create developer apps on Google to get these credentials.
-
-# Google
-GOOGLE_CLIENT_ID="your-google-client-id"
-GOOGLE_CLIENT_SECRET="your-google-client-secret"
+# --- Cloud & Logging ---
+AWS_REGION=eu-north-1
+LOG_LEVEL=info
