docs: Update monitoring workflows and documentation
- Refine monitoring workflow in CI by piping output to cat.
- Update testing guide with latest test case count and last updated date.
- Enhance monitoring and alerting documentation with CloudWatch integration specifics.

--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -24,10 +24,9 @@ jobs:
         run: npm ci
 
       - name: Run monitoring checks (API + Performance)
-        run: npm run monitor:all:ci
+        run: npm run monitor:all:ci | cat
 
       - name: Lighthouse (Web) — performance & a11y
-        if: env.MONITORING_WEB_URL != ''
         uses: treosh/lighthouse-ci-action@v11
         with:
           urls: |
