feat: Implement extensive testing infrastructure with Playwright E2E and Vitest unit tests
This commit introduces a comprehensive testing suite, integrating Playwright for end-to-end testing across various features (admin actions, auth, blog, company offers, student applications, profile editing, routing, static pages) and expanding Vitest unit test coverage for components, hooks, and services. Key updates include: adding Playwright configuration and dependencies, updating CI/CD to run E2E tests, refactoring accessibility tests with jest-axe integration, and enhancing test utilities. TurboRepo configurations were also adjusted for optimized test execution.

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -27,9 +27,12 @@
       "@ui/*": ["../../packages/ui/src/*"]
     }
   },
-  "include": [
-    "src",
-    "src/i18n/locales/*.json"
+  "include": ["src", "src/i18n/locales/*.json", "src/types/**/*.d.ts"],
+  "exclude": [
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "src/**/__tests__/**",
+    "src/test/**"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 } 
