--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,9 @@
     "test:watch": "vitest --watch",
     "test:specific": "vitest run --reporter=verbose",
     "test:coverage": "vitest run --coverage --reporter=verbose",
-    "test:no-coverage": "vitest run --reporter=verbose"
+    "test:no-coverage": "vitest run --reporter=verbose",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -32,6 +34,7 @@
     "lucide-react": "^0.526.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.58.1",
     "react-i18next": "^15.6.1",
     "react-router-dom": "^6.20.1",
@@ -58,6 +61,7 @@
     "axe-core": "^4.10.3",
     "jest-axe": "^10.0.0",
     "jsdom": "^23.0.0",
+    "@playwright/test": "^1.48.2",
     "postcss": "^8.4.32",
     "storybook": "^8.6.14",
     "tailwindcss": "^3.3.6",
