--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "test": "turbo test",
-    "test:watch": "turbo test:watch",
-    "test:specific": "turbo test:specific",
-    "test:coverage": "turbo test:coverage",
-    "test:no-coverage": "turbo test:no-coverage",
+    "test": "turbo run test",
+    "test:watch": "turbo run test:watch",
+    "test:specific": "turbo run test:specific",
+    "test:coverage": "turbo run test:coverage",
+    "test:no-coverage": "turbo run test:no-coverage",
+    "unit-test": "npm run api:test && npm run web:test",
+    "e2e-test": "npm run test:e2e --workspace=apps/web",
     "clean": "find . \\( -name 'node_modules' -o -name 'dist' -o -name 'build' -o -name '.turbo' -o -name 'coverage' -o -name '.next' -o -name '.cache' -o -name '.nyc_output' -o -name 'out' -o -name '.prisma' -o -name '.vite' -o -name 'temp' -o -name 'tmp' \\) -type d -prune -exec rm -rf '{}' + && find . -path './node_modules' -prune -o \\( -name '*.log' -o -name '*.lcov' -o -name '*.tsbuildinfo' -o -name '*.tmp' -o -name '*.temp' -o -name '.DS_Store' -o -name 'Thumbs.db' -o -name '*.swp' -o -name '*.swo' -o -name '*~' -o -name '.env' -o -name 'cookies.txt' \\) -type f -print0 | xargs -0 rm -f",
     "start": "npm run start --workspace=apps/api",
     "preview": "npm run preview --workspace=apps/web",
