--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -2,7 +2,7 @@ name: Monitoring
 
 on:
   schedule:
-    - cron: '0 * * * *' # hourly
+    - cron: '0 0 * * *' # daily at midnight UTC
   workflow_dispatch: {}
 
 jobs:
